  'Some pages have not been saved. Do you really want to quit?' message.
* Improvements to the Crashed sessions dialog to make it more intuitive.
* Update position of OCR text when cropping
* Create PS level 3 instead of 1.
* Fix check for unpaper version. Closes #285 (Scan fails if unpaper is not
  installed but selected in post processing)
* Update to Hungarian translation (thanks to csola)


2.8.0 (11.06.2020):

* Interpolate colours according to OCR confidence in HSV space.
* Limit zoom to 100 to avoid errors like:
  "drawing failure for widget 'GtkBox': error occurred in libfreetype"
* Also update text position and rectangle when updating bounding box.
* + button to add to text layer
* + preference to disable device list cache
* + mini-wizard if device not found
* Fix save as PS. Closes Debian bug #962151
 (Failure to save: unitialized value $SETTINGS{"ps_backend"})
* Update to Hungarian translation (thanks to csola)
* Update to Ukrainian translation (thanks to Yuri Chornoivan)


2.7.0 (08.05.2020):

* Cache device list to speed up first display of scan dialog.
* Fix bug updating switch widgets in scan options.
* Fixed bug importing file with non-ASCII characters in filename from file
  browser.
* Use daylight savings time from document date when setting timezone.
* Use UTF8 in logs, fixing "wide character in print" warnings.
* Fix UTF8 encoding when importing metadata from PDF or DjVu.
* When editing OCR text, display bounding box on image and allow it to be
  adjusted.
* + buttons to navigate between OCR text boxes, sorted by confidence level.
* Zoom to text when editing OCR
* Fix error running File/Compress temporary files.
* Use only xdg-email for creating email. Closes feature request #112
  (Use gsettings and xdg-email instead of gconftool for sending e-mails)
* Use GTK functionality instead of xdg-open for launching file viewer.
* Update to French translation (thanks to Jean-Marc)


2.6.7 (08.04.2020):

* Fix bug causing stretched images after cropping.