@@ -1,6 +1,6 @@
 use warnings;
 use strict;
-use Test::More tests => 26;
+use Test::More tests => 14;
 
 BEGIN {
     use_ok('Gscan2pdf::Tesseract');
@@ -12,68 +12,6 @@ BEGIN {
 use Log::Log4perl qw(:easy);
 Log::Log4perl->easy_init($WARN);
 my $logger = Log::Log4perl::get_logger;
-
-my $output = <<EOS;
-Unable to load unicharset file /usr/share/tesseract-ocr/tessdata/.unicharset
-EOS
-
-my ( $tessdata, $version, $suffix ) =
-  Gscan2pdf::Tesseract::parse_tessdata($output);
-is( $tessdata, '/usr/share/tesseract-ocr/tessdata', 'v2 tessdata' );
-is( $version,  2,                                   'v2' );
-is( $suffix,   '.unicharset',                       'v2 suffix' );
-
-$output = <<EOS;
-Error openning data file /usr/share/tesseract-ocr/tessdata/.traineddata
-
-EOS
-
-( $tessdata, $version, $suffix ) =
-  Gscan2pdf::Tesseract::parse_tessdata($output);
-is( $tessdata, '/usr/share/tesseract-ocr/tessdata', 'v3 tessdata' );
-is( $version,  3,                                   'v3' );
-is( $suffix,   '.traineddata',                      'v3 suffix' );
-
-$output = <<EOS;
-Tesseract Open Source OCR Engine v3.01 with Leptonica
-Cannot open input file:
-Error opening data file /usr/share/tesseract-ocr/tessdata/.traineddata
-
-EOS
-
-( $tessdata, $version, $suffix ) =
-  Gscan2pdf::Tesseract::parse_tessdata($output);
-is( $tessdata, '/usr/share/tesseract-ocr/tessdata', 'v3.01 tessdata' );
-is( $version,  3.01,                                'v3.01' );
-is( $suffix,   '.traineddata',                      'v3.01 suffix' );
-
-$output = <<'EOS';
-Tesseract Open Source OCR Engine v3.02 with Leptonica
-Cannot open input file:
-Tesseract couldn't load any languages!
-
-
-EOS
-
-( $tessdata, $version, $suffix ) =
-  Gscan2pdf::Tesseract::parse_tessdata($output);
-is( $version, 3.02,           'v3.02' );
-is( $suffix,  '.traineddata', 'v3.02 suffix' );
-
-$output = <<'EOS';
-N9tesseract8IndexMapE
-Usage
-TESSDATA_PREFIX
-Warning:explicit path for executable will not be used for configs
-/usr/share/tesseract-ocr/
-Offset for type %d is %lld
-EOS
-
-is(
-    Gscan2pdf::Tesseract::parse_strings($output),
-    '/usr/share/tesseract-ocr/tessdata',
-    'v3.02 tessdata'
-);
 
 SKIP: {
     skip 'Tesseract not installed', 13
